Fixed layout if main menu not in navigation region Wrapped logo, name and slogan in a site__banner element for better control

--- a/sass/_components.header.scss
+++ b/sass/_components.header.scss
@@ -1,10 +1,13 @@
 .site__header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
   margin-bottom: $base-spacing;
   padding-bottom: $base-spacing;
   box-shadow: $box-shadow;
+}
+
+.site__banner {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .site__logo {
