--- a/sass/_components.navbar.scss
+++ b/sass/_components.navbar.scss
@@ -1,4 +1,4 @@
-.navbar {
+[id="block-system-main-menu"] {
 
   ul {
     list-style: none;
